# SDL2_createawindow

./: CMakeLists.txt  main.cpp
Graphics/: Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h
Shapes/: Circle.cpp  Circle.h  Line2D.cpp  Line2D.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Tirangle.h  Triangle.cpp
Utils/: Utils.cpp
